[package]
name = "lazy_bencoding"
description = "Lazy BEncoding parser that gives you iterators over byte slices"
version = "0.1.1"
authors = ["Astro <astro@spaceboyz.net>"]
license-file = "LICENSE"
repository = "https://github.com/astro/lazy_bencoding"
documentation = "http://astro.github.io/lazy_bencoding/lazy_bencoding/"

[dependencies]
